--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./public/images/logo.svg" alt="Happy logo" srcset="">
+        <div>
+            <strong>São Paulo</strong>
+            <p>São Paulo</p>
+        </div>
+    </header>
 </body>
 </html>
