--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./public/images/logo-icon.png">
-    <link rel="stylesheet" href="./public/css/main.css">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <img src="./public/images/logo.svg" alt="Happy logo" srcset="">
-        <div>
-            <strong>São Paulo</strong>
-            <p>São Paulo</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="stylesheet" href="./public/css/main.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <div id="page-landing">
+            <div id="container">
+                <header>
+                    <img src="./public/images/logo.svg" alt="Happy logo" srcset="">
+                    <div>
+                        <strong>São Paulo</strong>
+                        <p>São Paulo</p>
+                    </div>
+                </header>
+                <main>
+                    <h1>Leve felicidade para o mundo</h1>
+                    <section>
+                        <p>Visite orfanatos e mude o dia de muitas crianças.</p>
+                        <a href="#" title="Visite orfanatos">
+                            <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+                        </a>
+                    </section>
+                </main>
+            </div>
         </div>
-    </header>
-    <main>
-        <h1>Leve felicidade para o mundo</h1>
-        <section>
-            <p>Visite orfanatos e mude o dia de muitas crianças.</p>
-            <a href="#" title="Visite orfanatos">
-                <img src="./public/images/arrow.svg" alt="Ir para o mapa">
-            </a>
-        </section>
-    </main>
-</body>
+    </body>
 </html>
