--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
         <link rel="icon" href="./public/images/logo-icon.png">
         <link rel="stylesheet" href="./public/css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
-        <title>Document</title>
+        <title>Happy</title>
     </head>
     <body>
         <div id="page-landing">
             <div id="container">
                 <header>
-                    <img src="./public/images/logo.svg" alt="Happy logo" srcset="">
-                    <div>
+                    <img id="logo" src="./public/images/logo.svg" alt="Happy logo" srcset="">
+                    <div class="location">
                         <strong>São Paulo</strong>
                         <p>São Paulo</p>
                     </div>
                 </header>
                 <main>
                     <h1>Leve felicidade para o mundo</h1>
-                    <section>
+                    <section class="visit">
                         <p>Visite orfanatos e mude o dia de muitas crianças.</p>
                         <a href="#" title="Visite orfanatos">
                             <img src="./public/images/arrow.svg" alt="Ir para o mapa">
