--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
         <div id="page-landing">
             <div id="container">
                 <header>
-                    <img id="logo" src="./public/images/logo.svg" alt="Happy logo" srcset="">
-                    <div class="location">
+                    <img
+                    class="animate-up" 
+                    id="logo" 
+                    src="./public/images/logo.svg" 
+                    alt="Happy logo" srcset="">
+                    <div class="location animate-up">
                         <strong>São Paulo</strong>
                         <p>São Paulo</p>
                     </div>
                 </header>
                 <main>
-                    <h1>Leve felicidade para o mundo</h1>
+                    <h1 class="animate-up">Leve felicidade para o mundo</h1>
                     <section class="visit">
                         <p>Visite orfanatos e mude o dia de muitas crianças.</p>
                         <a href="#" title="Visite orfanatos">
