--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <main>
                     <h1 class="animate-up">Leve felicidade para o mundo</h1>
                     <section class="visit">
-                        <p>Visite orfanatos e mude o dia de muitas crianças.</p>
-                        <a href="#" title="Visite orfanatos">
+                        <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
+                        <a href="#" title="Visite orfanatos" class="animate-up">
                             <img src="./public/images/arrow.svg" alt="Ir para o mapa">
                         </a>
                     </section>
