--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" href="./public/images/logo-icon.png">
+
         <link rel="stylesheet" href="./public/css/main.css">
+        <link rel="stylesheet" href="./public/css/animations.css">
+        <link rel="stylesheet" href="./public/css/page-landing.css">
+
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
         <title>Happy</title>
     </head>
