--- a/orphanages.html
+++ b/orphanages.html
@@ -8,35 +8,28 @@
 
         <link rel="stylesheet" href="./public/css/main.css">
         <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/page-landing.css">
+        <link rel="stylesheet" href="./public/css/page-orphanages.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
         <title>Happy</title>
     </head>
     <body>
-        <div id="page-landing">
-            <div id="container">
-                <header>
-                    <img
-                    class="animate-up" 
-                    id="logo" 
-                    src="./public/images/logo.svg" 
-                    alt="Happy logo" srcset="">
-                    <div class="location animate-up">
-                        <strong>São Paulo</strong>
-                        <p>São Paulo</p>
-                    </div>
-                </header>
-                <main>
-                    <h1 class="animate-up">Leve felicidade para o mundo</h1>
-                    <section class="visit">
-                        <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
-                        <a href="#" title="Visite orfanatos" class="animate-up">
-                            <img src="./public/images/arrow.svg" alt="Ir para o mapa">
-                        </a>
-                    </section>
-                </main>
-            </div>
-        </div>
+       <div id="page-orphanages">
+           <aside>
+               <header>
+                   <img src="./public/images/map-marker.svg" alt="Happy">
+                   <h2>Escolha um orfanato no map</h2>
+                   <p>Muitas crianças estão esperando sua visita :)</p>
+               </header>
+               <footer>
+                   <strong>São Paulo</strong>
+                   <p>São Paulo </p>
+               </footer>
+           </aside>
+           <div id="map-id"></div>
+           <a href="create-orphanage.html" class="create-orphanage" title="cadastre um orfanato">
+               <img src="./public/images/plus.svg" alt="Criar orfanato">
+           </a>
+       </div>
     </body>
 </html>
