--- a/orphanages.html
+++ b/orphanages.html
@@ -18,7 +18,7 @@
            <aside>
                <header>
                    <img src="./public/images/map-marker.svg" alt="Happy">
-                   <h2>Escolha um orfanato no map</h2>
+                   <h2>Escolha um orfanato no mapa</h2>
                    <p>Muitas crianças estão esperando sua visita :)</p>
                </header>
                <footer>
