--- a/orphanage-spot.html
+++ b/orphanage-spot.html
@@ -26,10 +26,16 @@
     </head>
     <body>
        <div id="orphanage-spot">
-           <aside class="animate-right">
-               
+           <aside class="animate-right aside">
+               <img src="./public/images/map-marker.svg" alt="Happy">
+               <footer>
+                   <button onclick="history.back();">
+                       <img src="./public/images/arrow-back.svg" alt="Voltar">
+                   </button>
+                   
+               </footer>
            </aside>
-            <main>
+            <main class="animate-appear">
                 <div class="orphanage-details">
                     <img src="./public/images/home.jpg" alt="Lar das meninas">
                     <div class="images">
