--- a/orphanage-spot.html
+++ b/orphanage-spot.html
@@ -26,7 +26,7 @@
     </head>
     <body>
        <div id="orphanage-spot">
-           <aside class="animate-right aside">
+           <aside class="animate-right sidebar">
                <img src="./public/images/map-marker.svg" alt="Happy">
                <footer>
                    <button onclick="history.back();">
@@ -35,7 +35,7 @@
                    
                </footer>
            </aside>
-            <main class="animate-appear">
+            <main class="animate-appear with-sidebar">
                 <div class="orphanage-details">
                     <img src="./public/images/home.jpg" alt="Lar das meninas">
                     <div class="images">
