--- a/spot-orphanage.html
+++ b/spot-orphanage.html
@@ -19,13 +19,13 @@
         <!-- styles -->
         <link rel="stylesheet" href="./public/css/main.css">
         <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/orphanage-spot.css">
+        <link rel="stylesheet" href="./public/css/spot-orphanage.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
         
     </head>
     <body>
-       <div id="orphanage-spot">
+       <div id="spot-orphanage">
            <aside class="animate-right sidebar">
                <img src="./public/images/map-marker.svg" alt="Happy">
                <footer>
@@ -39,28 +39,28 @@
                 <div class="orphanage-details">
                     <img src="./public/images/home.jpg" alt="Lar das meninas">
                     <div class="images">
-                        <button class="active" type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" class="active" type="button">
+                            <img src="https://source.unsplash.com/random?id=1" alt="Lar das meninas">
                         </button>
 
-                        <button type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" type="button">
+                            <img src="https://source.unsplash.com/random?id=2" alt="Lar das meninas">
                         </button>
 
-                        <button type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" type="button">
+                            <img src="https://source.unsplash.com/random?id=3" alt="Lar das meninas">
                         </button>
 
-                        <button type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" type="button">
+                            <img src="https://source.unsplash.com/random?id=4" alt="Lar das meninas">
                         </button>
 
-                        <button type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" type="button">
+                            <img src="https://source.unsplash.com/random?id=5" alt="Lar das meninas">
                         </button>
 
-                        <button type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das meninas">
+                        <button onclick="selectImage(event)" type="button">
+                            <img src="https://source.unsplash.com/random?id=6" alt="Lar das meninas">
                         </button>
                     </div>
                     <div class="orphanage-details-content">
@@ -94,6 +94,6 @@
                     </div>
                 </div>
             </main>
-       <script src="./public/scripts/orphanage-spot.js"></script>
+       <script src="./public/scripts/spot-orphanage.js"></script>
     </body>
 </html>
