--- a/location-orphanages.html
+++ b/location-orphanages.html
@@ -19,7 +19,7 @@
         <!-- styles -->
         <link rel="stylesheet" href="./public/css/main.css">
         <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/map-orphanages.css">
+        <link rel="stylesheet" href="./public/css/location-orphanages.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
         
@@ -38,10 +38,10 @@
                </footer>
            </aside>
            <div id="mapid" class="animate-appear"></div>
-           <a href="create-orphanage.html" class="create-orphanage" title="cadastre um orfanato">
+           <a href="form-orphanage.html" class="create-orphanage" title="cadastre um orfanato">
                <img src="./public/images/plus.svg" alt="Criar orfanato">
            </a>
        </div>
-       <script src="./public/scripts/map-orphanages.js"></script>
+       <script src="./public/scripts/location-orphanages.js"></script>
     </body>
 </html>
